--- a/__dummy__.ipynb
+++ b/__dummy__.ipynb
@@ -1,6 +1,27 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Atualizando o ID e os assets da VSL Converteai para o novo player informado.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Substituir player.js antigo e m3u8 antigo pelas novas URLs passadas pelo usuário.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Atualizar também o id usado no componente SmartPlayer para `vid-692d4694d69941550924da09`.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
